--- a/aoc-2k21.cabal
+++ b/aoc-2k21.cabal
@@ -28,12 +28,14 @@ library
       Day1
       Day2
       Day3
+      Day4
   other-modules:
       Paths_aoc_2k21
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , split
   default-language: Haskell2010
 
 executable aoc-2k21-exe
@@ -46,6 +48,7 @@ executable aoc-2k21-exe
   build-depends:
       aoc-2k21
     , base >=4.7 && <5
+    , split
   default-language: Haskell2010
 
 test-suite aoc-2k21-test
@@ -59,4 +62,5 @@ test-suite aoc-2k21-test
   build-depends:
       aoc-2k21
     , base >=4.7 && <5
+    , split
   default-language: Haskell2010
