--- a/aoc-2k21.cabal
+++ b/aoc-2k21.cabal
@@ -32,12 +32,14 @@ library
       Day5
       Day6
       Day7
+      Day8
   other-modules:
       Paths_aoc_2k21
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers
     , split
   default-language: Haskell2010
 
@@ -51,6 +53,7 @@ executable aoc-2k21-exe
   build-depends:
       aoc-2k21
     , base >=4.7 && <5
+    , containers
     , split
   default-language: Haskell2010
 
@@ -65,5 +68,6 @@ test-suite aoc-2k21-test
   build-depends:
       aoc-2k21
     , base >=4.7 && <5
+    , containers
     , split
   default-language: Haskell2010
