--- a/aoc-2k21.cabal
+++ b/aoc-2k21.cabal
@@ -33,12 +33,14 @@ library
       Day6
       Day7
       Day8
+      Day9
   other-modules:
       Paths_aoc_2k21
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , containers
     , split
   default-language: Haskell2010
@@ -52,6 +54,7 @@ executable aoc-2k21-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aoc-2k21
+    , array
     , base >=4.7 && <5
     , containers
     , split
@@ -67,6 +70,7 @@ test-suite aoc-2k21-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aoc-2k21
+    , array
     , base >=4.7 && <5
     , containers
     , split
